RESOLVED FIXED282949
visionOS debug build fails on DataDetection.mm, missing field 'reserved' initializer.
https://bugs.webkit.org/show_bug.cgi?id=282949
Summary visionOS debug build fails on DataDetection.mm, missing field 'reserved' init...
Aleksei Marchenko
Reported 2024-11-11 12:57:02 PST
visionOS debug build fails with error: OpenSource/Source/WebCore/editing/cocoa/DataDetection.mm:603:77: error: missing field 'reserved' initializer [-Werror,-Wmissing-designated-field-initializers] 603 | DDQueryOffset lastModifiedQueryOffset = { .queryIndex = -1, .offset = 0 };
Attachments
EWS
Comment 1 2024-11-12 09:35:46 PST
Committed 286489@main (5fc582b9157f): <https://commits.webkit.org/286489@main> Reviewed commits have been landed. Closing PR #36501 and removing active labels.
Radar WebKit Bug Importer
Comment 2 2024-11-12 09:36:17 PST
Note You need to log in before you can comment on or make changes to this bug.