Fix visionOS debug build. https://bugs.webkit.org/show_bug.cgi?id=282949

Reviewed by Ryosuke Niwa.

The change fixes the following error:
DataDetection.mm:603:77: error: missing field 'reserved' initializer [-Werror,-Wmissing-designated-field-initializers]

* Source/WebCore/editing/cocoa/DataDetection.mm:
(WebCore::processDataDetectorScannerResults):

Canonical link: https://commits.webkit.org/286489@main